Assignment3/K8S_blogs/MicroserviceProjectForDocker/infra/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app:  frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  frontend
  template:
    metadata:
      labels:
        app:  frontend
    spec:
      containers:
      - name: frontend
        image: aishwaryaa/frontend
  
---
kind: Service
apiVersion: v1
metadata:
  name:  frontend-serv
spec:
  selector:
    app:  frontend
  # type:  LoadBalancer | ClusterIP | NodePort
  ports:
  - protocol:  TCP
    port:  3000
    targetPort:  3000
